Bug 1220570 - Potential cookie lost while downgrading from Aurora 44 to 43. r=jduell

--HG--
extra : rebase_source : f5fdca0cca8b67dd2ffb702993dfa3559cab08b9